# herbie

./: Makefile
.github/workflows/: distribute.yml
infra/: cost.rkt  max-accuracy.rkt  pareto-extract.rkt  pareto.rkt  platforms-eval.py  travis.rkt
ruler-herbie/: .gitignore  Cargo.toml  info.rkt  main.rkt
ruler-herbie/private/: rule-cache.rkt  rule-traits.rkt  ruler-expr.rkt  ruler-fpsafe.rkt  ruler-interface.rkt
ruler-herbie/src/: bool.rs  lib.rs  rational.rs
src/: alternative.rkt  common.rkt  config.rkt  conversions.rkt  datafile.rkt  embed.rkt  float.rkt  herbie.rkt  interface.rkt  load-plugin.rkt  mainloop.rkt  pareto.rkt  programs.rkt  sampling.rkt  sandbox.rkt  timeline.rkt
src/core/: alt-table.rkt  egg-herbie.rkt  localize.rkt  matcher.rkt  regimes.rkt  taylor.rkt
src/reprs/: binary32.rkt  binary64.rkt  bool.rkt  fallback.rkt
src/syntax/: read.rkt  rules.rkt  sugar.rkt  syntax-check.rkt  syntax.rkt
src/web/: demo.rkt  history.rkt  make-graph.rkt  make-report.rkt  pages.rkt  plot.rkt  report.css  run.rkt  thread-pool.rkt  timeline.rkt
